tests/errors/alfa/semantic_error5.alfa
//****Error semantico en lin X: Comparacion con operandos boolean.
main
{
    int x, y ;
    boolean a,b; 

    x=1;
    x=2;
    a=true;
    a=false;

    a = (a>b);
}    